reworked into to reflect evaluation more better

--- a/intro.tex
+++ b/intro.tex
@@ -99,6 +99,25 @@ The goal of Napali is not to provide a low rate of false positives for a particu
 
 Consider a lightning strike on a hypothetical 12kV feeder line in a hierarchical power grid. The directly affected devices will be the ones downstream from the disturbance. These devices will experience the most severe effects, most notably transients, as they propagate throughput the power delivery infrastructure. The indirectly affected devices will expedience a power anomaly mainly attributed to the power production entities trying to compensate for the large disturbance caused by the lightning strike. Thus, monitoring of the leaf edges of the power delivery system can in principle provide insights into the disturbances that originate deep inside the power distribution network.
 
-To evaluate the benefits of this architecture, I will assess the data collected by the OPQ network at the University of Hawaii in order to determine if the claimed benefits of the architecture are observed in practice. First, I will compare OPQ data to data collected from building-level monitors in order to determine whether or not false negatives are present.  A low number of false negatives will provide evidence that Napali's hybrid architecture does not sacrifice detection effectiveness.  Second, I will compute the storage and bandwidth savings from this hybrid architecture relative to an alternative architecture in which all waveform data is sent to a centralized server for analysis. Third, I will assess whether the onboard storage implemented in OPQ is sufficient for triggering, and whether or not situations occur when triggers request data that is no longer available at a node. Fourth, I will determine whether or not sub-threshold data acquisition occurs in practice for the test deployment. Fifth, I will assess whether or not the coarse features of the signal can be used to determine the extent of anomalies through temporal locality, and to what extent this approach conflicts with sub-threshold data acquisition. Although power failure resiliency and flexible privacy are claimed benefits of the Napali architecture, they will not be evaluated as part of this thesis research.
+To evaluate the benefits of this architecture, I will assess the data collected by the OPQ network at the University of Hawaii in order to determine if the claimed benefits of the architecture are observed in practice. The description of the evaluation processes for the benefits described in Section \ref{intro:section:napali} is summarized below.
+
+\begin{enumerate}
+  \item \textbf{Bandwidth usage is minimized:} Bandwidth consumption of the OPQ system will be carefully monitored, recorded and compared to the bandwidth required to transmit the equivalent amount of raw data.
+    
+	\item \textbf{Effects of latency are minimized:}  Latency limits of the triggering system will be examined. Since these are heavily dependent on the raw data storage ability of the OPQ Box, latency effects will be tested under various amount of memory allocated for this task.
+  
+	\item \textbf{Sink processing requirements are minimized:} Synthetic benchmarks will be carried out on the sink node to determine the scalability of the triggering system. These scalability metrics will be compared with a synthetic benchmark of running multiple copies of the OPQ Box analysis software on the same node. This will allow me to compare the scalability of the sink node in the case of sending the entirety of raw data stream versus the Napali frameworks approach of only sending extracted metrics.
+  
+  \item \textbf{Temporal Locality:} The efficiency of the temporal locality triggering algorithm will be evaluated, by acquiring data from all of the OPQ Boxes deployed at the University of Hawaii every time an event is detected in the triggering stream of a single device. By analyzing both the triggering stream and the raw data from the devices, the effectiveness of the temporal locality triggering algorithms will be analyzed.
+
+	\item \textbf{Sub-threshold data acquisition:} Evaluation of the sub-threshold data acquisition will be increasingly 
+  
+	\item \textbf{Power failure resiliency:} 
+
+	\item \textbf{Flexible Privacy:} 
+
+\end{enumerate}
+
+First, I will compare OPQ data to data collected from building-level monitors in order to determine whether or not false negatives are present.  A low number of false negatives will provide evidence that Napali's hybrid architecture does not sacrifice detection effectiveness.  Second, I will compute the storage and bandwidth savings from this hybrid architecture relative to an alternative architecture in which all waveform data is sent to a centralized server for analysis. Third, I will assess whether the onboard storage implemented in OPQ is sufficient for triggering, and whether or not situations occur when triggers request data that is no longer available at a node. Fourth, I will determine whether or not sub-threshold data acquisition occurs in practice for the test deployment. Fifth, I will assess whether or not the coarse features of the signal can be used to determine the extent of anomalies through temporal locality, and to what extent this approach conflicts with sub-threshold data acquisition. Although power failure resiliency and flexible privacy are claimed benefits of the Napali architecture, they will not be evaluated as part of this thesis research.
 
 The OpenPowerQuality system is designed to be a test bed for development of new power quality detection and analysis algorithms. Its introduction will facilitate development of new techniques and methods for studying power system. The main scientific contributions of this work are validating the proposed benefits of Napali as outlined in Section \ref{intro:section:napali} in a real setting utilizing OPQ system as a test bench.
