--- a/proposal.tex
+++ b/proposal.tex
@@ -21,7 +21,8 @@
 %% last.
 \othermembers{Peter-Michael Seidel\\
 Edo Biagioni\\
-Lipyeow Lim
+Lipyeow Lim\\
+Matthias Fripp
 }
 %% The field in which you are obtaining your degree, capitalized normally.
 \field{Computer Science}
