--- a/proposal.bib
+++ b/proposal.bib
@@ -297,3 +297,13 @@ booktitle = {IEEE Communications Magazine}
   year={2013},
   organization={IEEE}
 }
+
+@inproceedings{zhang2009new,
+  title={A new data compression algorithm for power quality online monitoring},
+  author={Zhang, Dahai and Bi, Yanqiu and Zhao, Jianguo},
+  booktitle={Sustainable Power Generation and Supply, 2009. SUPERGEN'09. International Conference on},
+  pages={1--4},
+  year={2009},
+  organization={IEEE}
+}
+
