--- a/intro.tex
+++ b/intro.tex
@@ -87,7 +87,7 @@ The main disadvantage of this method is that while there are plenty of power qua
 	  \label{intro:fig2}
 \end{figure}
 
-\section{Thesis claim and evaluation}
+\section{Thesis claim and evaluation} \label{intro:sec:claim}
 
 Today`s big data world is plagued with the issues of data cleaning and validation, even though it`s being relied on for timely, accurate and actionable intelligence. With large ingress of unstructured data these issues are unavoidable, and preprocessing will remain a large portion of the analysis workload. However, in the case of sensor networks designed for a specific purpose, the tasks of anomaly detection can be pushed to the edge of the network using the Napali methodology. The claim of this thesis is that Napali provides novel architecture that is both a feasible solution to the problem of distributed power quality monitoring and which also provides significant benefits over the two standard alternative architectures (all computation/storage at nodes, all computation/storage at the sink).
 
@@ -99,25 +99,21 @@ The goal of Napali is not to provide a low rate of false positives for a particu
 
 Consider a lightning strike on a hypothetical 12kV feeder line in a hierarchical power grid. The directly affected devices will be the ones downstream from the disturbance. These devices will experience the most severe effects, most notably transients, as they propagate throughput the power delivery infrastructure. The indirectly affected devices will expedience a power anomaly mainly attributed to the power production entities trying to compensate for the large disturbance caused by the lightning strike. Thus, monitoring of the leaf edges of the power delivery system can in principle provide insights into the disturbances that originate deep inside the power distribution network.
 
-To evaluate the benefits of this architecture, I will assess the data collected by the OPQ network at the University of Hawaii in order to determine if the claimed benefits of the architecture are observed in practice. The description of the evaluation processes for the benefits described in Section \ref{intro:section:napali} is summarized below.
+The OpenPowerQuality system is designed to be a test bed for development of new power quality detection and analysis algorithms. Its introduction will facilitate development of new techniques and methods for studying power system, by utilizing Napali framework as the main anomaly detection methodology. To evaluate the benefits of this architecture, I will assess the data collected by the OPQ network at the University of Hawaii in order to determine if the claimed benefits of the architecture are observed in practice. The description of the evaluation processes for the benefits described in Section \ref{intro:section:napali} is summarized below.
 
 \begin{enumerate}
-  \item \textbf{Bandwidth usage is minimized:} Bandwidth consumption of the OPQ system will be carefully monitored, recorded and compared to the bandwidth required to transmit the equivalent amount of raw data.
+  \item \textbf{Bandwidth usage is minimized:} Bandwidth consumption of the OPQ system will be carefully monitored, recorded and compared to the bandwidth required to transmit the equivalent amount of raw data. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:band}.
     
-	\item \textbf{Effects of latency are minimized:}  Latency limits of the triggering system will be examined. Since these are heavily dependent on the raw data storage ability of the OPQ Box, latency effects will be tested under various amount of memory allocated for this task.
+	\item \textbf{Effects of latency are minimized:}  Latency limits of the triggering system will be examined. Since these are heavily dependent on the raw data storage ability of the OPQ Box, latency effects will be tested under various amount of memory allocated for this task. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:lat}.
   
-	\item \textbf{Sink processing requirements are minimized:} Synthetic benchmarks will be carried out on the sink node to determine the scalability of the triggering system. These scalability metrics will be compared with a synthetic benchmark of running multiple copies of the OPQ Box analysis software on the same node. This will allow me to compare the scalability of the sink node in the case of sending the entirety of raw data stream versus the Napali frameworks approach of only sending extracted metrics.
+	\item \textbf{Sink processing requirements are minimized:} Synthetic benchmarks will be carried out on the sink node to determine the scalability of the triggering system. These scalability metrics will be compared with a synthetic benchmark of running multiple copies of the OPQ Box analysis software on the same node. This will allow me to compare the scalability of the sink node in the case of sending the entirety of raw data stream versus the Napali frameworks approach of only sending extracted metrics. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:scale}.
   
-  \item \textbf{Temporal Locality:} The efficiency of the temporal locality triggering algorithm will be evaluated, by acquiring data from all of the OPQ Boxes deployed at the University of Hawaii every time an event is detected in the triggering stream of a single device. By analyzing both the triggering stream and the raw data from the devices, the effectiveness of the temporal locality triggering algorithms will be analyzed.
+  \item \textbf{Temporal locality:} Data acquired from the UH building level meters will be compared with the data acquired via the Napali triggering framework.  This will allow me to establish the rate of false positives and negatives and evaluate the temporal locality triggering algorithm. Furthermore, the single location events, which are normally rejected by Napali will also be examined and compared to the data provided by the building power meters. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:loc}.
 
-	\item \textbf{Sub-threshold data acquisition:} Evaluation of the sub-threshold data acquisition will be increasingly 
+	\item \textbf{Sub-threshold data acquisition:} Evaluation of the sub-threshold data acquisition will performed in two ways. First, the triggering stream from the OPQ Boxes will be stored along with the acquired raw data. The triggering stream can be used to compute which fraction of devices would have self triggered if operating autonomously. Next the building level meters self triggering capabilities, will be compared to the Napali, sub-threshold triggering in order to compare Napali to a commercially deployed system. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:sub}.
   
-	\item \textbf{Power failure resiliency:} 
-
-	\item \textbf{Flexible Privacy:} 
-
 \end{enumerate}
+Although power failure resiliency and flexible privacy are claimed benefits of the Napali architecture, they will not be evaluated as part of this thesis research. Flexible privacy would require a much larger deployment, and a user study, which is not possible with the current level of funding. Furthermore the power failure resilience of the Napali framework would require a significant development effort in development of the battery management system. Since complete power failures are quite rare, there is no guarantee that a single power outage would occur at the UH campus during the deployment. 
 
-First, I will compare OPQ data to data collected from building-level monitors in order to determine whether or not false negatives are present.  A low number of false negatives will provide evidence that Napali's hybrid architecture does not sacrifice detection effectiveness.  Second, I will compute the storage and bandwidth savings from this hybrid architecture relative to an alternative architecture in which all waveform data is sent to a centralized server for analysis. Third, I will assess whether the onboard storage implemented in OPQ is sufficient for triggering, and whether or not situations occur when triggers request data that is no longer available at a node. Fourth, I will determine whether or not sub-threshold data acquisition occurs in practice for the test deployment. Fifth, I will assess whether or not the coarse features of the signal can be used to determine the extent of anomalies through temporal locality, and to what extent this approach conflicts with sub-threshold data acquisition. Although power failure resiliency and flexible privacy are claimed benefits of the Napali architecture, they will not be evaluated as part of this thesis research.
+The last claim of this dissertation is that the Napali architecture, can be applied to other domains. Once the Napali framework is fully characterized, and it`s strengths and weaknesses are well understood, I intend to perform an in-depth literature review of other domains which could benefit from Napali-like approach of event detection.
 
-The OpenPowerQuality system is designed to be a test bed for development of new power quality detection and analysis algorithms. Its introduction will facilitate development of new techniques and methods for studying power system. The main scientific contributions of this work are validating the proposed benefits of Napali as outlined in Section \ref{intro:section:napali} in a real setting utilizing OPQ system as a test bench.
